--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,62 +1,60 @@
-.home {
+.main {
     background-color: var(--neutraldarkdarkest);
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
   }
   
-  .home .div-2 {
-    background-color: var(--neutraldarkdarkest);
+  .main .div-2 {
     height: 1767px;
     position: relative;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .main-image {
-    height: 200px !important;
+  .main .main-image {
+    height: 180px !important;
     left: 0 !important;
     position: absolute !important;
     top: 0 !important;
-    width: 375px !important;
+    width: 600px !important;
+    padding: 0;
   }
   
-  .home .icon-instance-node {
+  .main .icon-instance-node {
     height: 32px !important;
     position: relative !important;
     width: 32px !important;
   }
   
-  .home .home-message {
+  .main .home-message {
     align-items: center;
     display: flex;
     gap: 10px;
-    justify-content: flex-end;
-    left: 0;
+    justify-content: center;
     padding: 16px;
     position: absolute;
     top: 200px;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .home-copyright {
+  .main .main-copyright {
     flex: 1 !important;
     flex-grow: 1 !important;
     width: unset !important;
   }
   
-  .home .design-component-instance-node {
+  .main .design-component-instance-node {
     color: var(--neutrallightlightest) !important;
   }
   
-  .home .company-login {
+  .main .company-login {
     background-color: var(--neutraldarkmedium) !important;
     display: flex !important;
     height: 23px !important;
     width: 106px !important;
   }
   
-  .home .button-primary-instance {
+  .main .button-primary-instance {
     font-family: var(--action-action-s-font-family) !important;
     font-size: var(--action-action-s-font-size) !important;
     font-style: var(--action-action-s-font-style) !important;
@@ -68,55 +66,54 @@
     white-space: nowrap !important;
   }
   
-  .home .banner {
+  .main .banner {
     align-items: center;
     display: flex;
     gap: 10px;
     height: 100px;
-    justify-content: flex-end;
-    left: 0;
+    justify-content: center;
     padding: 16px;
     position: absolute;
     top: 265px;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .KONEX-banner {
+  .main .KONEX-banner {
+    justify-content: center;
     align-self: stretch !important;
     background-color: #11052e !important;
     width: 339px !important;
   }
   
-  .home .horizontal-card-instance {
+  .main .horizontal-card-instance {
     margin-bottom: -0.5px !important;
     margin-top: -0.5px !important;
   }
   
-  .home .KONEX-banner-2 {
+  .main .KONEX-banner-2 {
     color: var(--neutrallightlight) !important;
   }
   
-  .home .tab {
+  .main .tab {
     align-items: center;
     display: flex;
     gap: 10px;
     height: 50px;
-    justify-content: flex-end;
-    left: 0;
+    justify-content: center;
     padding: 16px;
     position: absolute;
     top: 365px;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .content-switcher-2 {
+  .main .content-switcher-2 {
     background-color: unset !important;
     margin-bottom: -10.5px !important;
     margin-top: -10.5px !important;
     width: 343px !important;
   }
   
-  .home .content-switcher-3 {
+  .main .content-switcher-3 {
     border-bottom-style: solid !important;
     border-bottom-width: 1px !important;
     border-color: var(--highlightlight) !important;
@@ -126,12 +123,12 @@
     z-index: 4 !important;
   }
   
-  .home .content-switcher-4 {
+  .main .content-switcher-4 {
     color: var(--neutrallightdark) !important;
     margin-top: -0.7px !important;
   }
   
-  .home .content-switcher-5 {
+  .main .content-switcher-5 {
     border-bottom-style: solid !important;
     border-bottom-width: 0.7px !important;
     border-color: var(--neutraldarkdark) !important;
@@ -141,7 +138,7 @@
     z-index: 2 !important;
   }
   
-  .home .content-switcher-6 {
+  .main .content-switcher-6 {
     background-color: unset !important;
     border-bottom-style: solid !important;
     border-bottom-width: 0.7px !important;
@@ -152,7 +149,7 @@
     z-index: 0 !important;
   }
   
-  .home .ranking-tab {
+  .main .ranking-tab {
     align-items: center;
     display: flex;
     gap: 10px;
@@ -162,10 +159,10 @@
     padding: 16px;
     position: absolute;
     top: 416px;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .section-tab {
+  .main .section-tab {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -177,31 +174,31 @@
     width: 200px;
   }
   
-  .home .chips {
+  .main .chips {
     height: 24px;
     position: relative;
     width: 183px;
   }
   
-  .home .tag-instance {
+  .main .tag-instance {
     left: 65px !important;
     position: absolute !important;
     top: 0 !important;
   }
   
-  .home .tag-2 {
+  .main .tag-2 {
     left: 130px !important;
     position: absolute !important;
     top: 0 !important;
   }
   
-  .home .tag-3 {
+  .main .tag-3 {
     left: 0 !important;
     position: absolute !important;
     top: 0 !important;
   }
   
-  .home .ranking-content {
+  .main .ranking-content {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -211,10 +208,10 @@
     padding: 16px;
     position: absolute;
     top: 466px;
-    width: 375px;
+    width: 600px;
   }
   
-  .home .rankin {
+  .main .rankin {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -225,10 +222,9 @@
     margin-right: -16px;
     padding: 16px;
     position: relative;
-    width: 375px;
   }
   
-  .home .company {
+  .main .company {
     align-items: center;
     display: flex;
     flex: 0 0 auto;
@@ -241,7 +237,7 @@
     width: 168px;
   }
   
-  .home .products {
+  .main .products {
     align-items: flex-start;
     align-self: stretch;
     display: flex;
@@ -252,7 +248,7 @@
     width: 100%;
   }
   
-  .home .vertical-card {
+  .main .vertical-card {
     align-items: flex-start;
     background-color: var(--neutrallightlight);
     border-radius: 16px;
@@ -264,33 +260,33 @@
     position: relative;
   }
   
-  .home .company-image {
+  .main .company-image {
     align-self: stretch;
     height: 120px;
     position: relative;
     width: 100%;
   }
   
-  .home .overlap-group {
+  .main .overlap-group {
     height: 120px;
     position: relative;
     width: 168px;
   }
   
-  .home .image-instance {
+  .main .image-instance {
     left: 0 !important;
     position: absolute !important;
     top: 0 !important;
     width: 168px !important;
   }
   
-  .home .rank {
+  .main .rank {
     left: 96px !important;
     position: absolute !important;
     top: 10px !important;
   }
   
-  .home .company-info {
+  .main .company-info {
     align-items: flex-start;
     align-self: stretch;
     display: flex;
@@ -302,7 +298,7 @@
     width: 100%;
   }
   
-  .home .title-2 {
+  .main .title-2 {
     align-items: flex-start;
     align-self: stretch;
     display: flex;
@@ -313,7 +309,7 @@
     width: 100%;
   }
   
-  .home .company-2 {
+  .main .company-2 {
     align-self: stretch;
     color: var(--neutraldarkdarkest);
     font-family: "Inter", Helvetica;
@@ -326,7 +322,7 @@
     text-align: center;
   }
   
-  .home .price {
+  .main .price {
     align-self: stretch;
     color: transparent;
     font-family: "Inter", Helvetica;
@@ -338,16 +334,16 @@
     text-align: center;
   }
   
-  .home .span {
+  .main .span {
     color: #1b1546;
   }
   
-  .home .text-wrapper-2 {
+  .main .text-wrapper-2 {
     color: #499ff7;
     font-weight: 700;
   }
   
-  .home .rankin-etc {
+  .main .rankin-etc {
     align-items: center;
     display: flex;
     flex: 0 0 auto;
@@ -361,7 +357,7 @@
     width: 375px;
   }
   
-  .home .products-wrapper {
+  .main .products-wrapper {
     align-items: center;
     display: flex;
     flex-direction: column;
