--- a/src/components/ContentSwitcher/style.css
+++ b/src/components/ContentSwitcher/style.css
@@ -26,7 +26,7 @@
   }
   
   .content-switcher.selected-true .section {
-    color: var(--neutraldarkdarkest);
+    color: var(--neutrallightlightest);
   }
   
   .content-switcher.selected-false .section {
