--- a/src/pages/Company/style.css
+++ b/src/pages/Company/style.css
@@ -9,10 +9,12 @@
   gap: 10px;
   position: relative;
   width: 100%;
+
 }
 
 .div-2{
   width: 600px;
+  padding-bottom: 5%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -116,7 +118,7 @@
 }
 
 .company .tab {
-  align-items: center;
+  align-items: flex-end;
   display: flex;
   gap: 10px;
   height: 50px;
@@ -127,12 +129,13 @@
   top: 5%;
   z-index: 1;
   width: 100%;
-  background-color: var(--neutraldarkdarkest);
+
 }
 
 .company .content-switcher-2 {
   background-color: unset;
   width: 70%;
+  background-color: var(--neutraldarkdarkest);
 }
 
 .company .design-component-instance-node-2 {
