--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -471,5 +471,9 @@
     color: var(--neutraldarkmedium);
     margin-bottom: 18px;
   }
+
+  .main .data-display .error-message {
+    color: var(--highlightlightest);
+  }
   
   
