--- a/src/components/ChatBox/style.css
+++ b/src/components/ChatBox/style.css
@@ -1,7 +1,7 @@
 @import url('./../../styles/styleguide.css');
 
 .ChatBox{
-    width: 400px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap:10px;
