--- a/src/components/MessageList/style.css
+++ b/src/components/MessageList/style.css
@@ -1,9 +1,10 @@
 .MessageList {
     width: 100%;
-    max-height: 346px;
+    max-height: 400px;
     border-radius: 10px;
     overflow-y: auto;
     box-sizing: border-box;
+    background-color: var(--neutraldarkdark);
   }
 
   
@@ -71,14 +72,12 @@
   }
 
 .messageBubble .bubbleContent {
-    width: 200px;
+    width: 50%;
     margin: 15px;
     align-items: flex-end;
     background-color: var(--highlightbackground);
     border-radius: 15px;
     flex-direction: column;
-    gap: 4px;
-    left: 24px;
     padding: 10px 15px;
     box-sizing: border-box;
     white-space: normal; 
@@ -87,13 +86,13 @@
 
   
   .bubbleContent .userName {
-    color: var(--neutrallightlightest);
-    font-family: var(--heading-h5-font-family);
-    font-size: var(--heading-h5-font-size);
-    font-style: var(--heading-h5-font-style);
-    font-weight: var(--heading-h5-font-weight);
-    letter-spacing: var(--heading-h5-letter-spacing);
-    line-height: var(--heading-h5-line-height);
+    color: var(--supportwarninglight);
+    font-family: var(--body-body-l-font-family);
+    font-size: var(--body-body-l-font-size);
+    font-style: var(--body-body-l-font-style);
+    font-weight: var(--body-body-l-font-weight);
+    letter-spacing: var(--body-body-l-letter-spacing);
+    line-height: var(--body-body-l-line-height);
     margin-bottom: 10px;
     position: relative;
     text-align: right;
@@ -102,12 +101,12 @@
   
   .bubbleContent .bubbleText {
     color: var(--neutrallightlightest);
-    font-family: var(--body-body-m-font-family);
-    font-size: var(--body-body-m-font-size);
-    font-style: var(--body-body-m-font-style);
-    font-weight: var(--body-body-m-font-weight);
-    letter-spacing: var(--body-body-m-letter-spacing);
-    line-height: var(--body-body-m-line-height);
+    font-family: var(--body-body-XS-font-family);
+    font-size: var(--body-body-XS-font-size);
+    font-style: var(--body-body-XS-font-style);
+    font-weight: var(--body-body-XS-font-weight);
+    letter-spacing: var(--body-body-XS-letter-spacing);
+    line-height: var(--body-body-XS-line-height);
     position: relative;
     text-align: right;
 
