--- a/src/components/Tab/style.css
+++ b/src/components/Tab/style.css
@@ -6,11 +6,11 @@
     padding: 4px;
     position: relative;
     width: 332px;
-    margin-bottom: 30px;
     background-color: transparent;
 }
 
 .MainTab .tab-btn {
+    
     background-color: transparent;
     align-items: center;
     border-radius: 0px;
@@ -22,19 +22,26 @@
     flex: 1 1 !important;
     flex-grow: 1 !important;
     z-index: 2 !important;
-    font-family: var(--heading-h5-font-family);
-    font-size: var(--heading-h5-font-size);
-    font-style: var(--heading-h5-font-style);
-    font-weight: var(--heading-h5-font-weight);
-    letter-spacing: var(--heading-h5-letter-spacing);
-    line-height: var(--heading-h5-line-height);
+    font-family: var(--body-body-m-font-family);
+    font-size: var(--body-body-m-font-size);
+    font-style: var(--body-body-m-font-style);
+    font-weight: var(--body-body-m-font-weight);
+    letter-spacing: var(--body-body-m-letter-spacing);
+    line-height: var(--body-body-m-line-height);
     color: var(--neutrallightdark);
     border-bottom: 2px solid var(--neutraldarkdark); /* 추가: 파랑색 탭 밑에 선 */
     cursor: pointer;
+    
 }
 
 .MainTab .active {
-    font-size: var(--heading-h5-font-size);
+    
+    font-family: var(--body-body-m-font-family);
+    font-size: var(--body-body-m-font-size);
+    font-style: var(--body-body-m-font-style);
+    font-weight: var(--body-body-m-font-weight);
+    letter-spacing: var(--body-body-m-letter-spacing);
+    line-height: var(--body-body-m-line-height);
     background-color: transparent;
     align-items: center;
     border-radius: 0px;
@@ -49,6 +56,7 @@
     color: var(--neutrallightlightest);
     border-bottom: 2px solid var(--highlightlight); /* 추가: 클릭된 탭 밑에 빨간색 선 */
     cursor: pointer;
+    
 }
 
 .MainTab .tab-content .tab-subtitle {
