--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -1,6 +1,6 @@
 @import url('./../../styles/styleguide.css');
 
-/* .managecompany *{
+/* .company *{
   border: 1px solid aqua;
 } */
 
@@ -11,7 +11,7 @@ html{
 }
 
 /* 전체화면 */
-.managecompany {
+.company {
   align-items: center;
   background-color: var(--neutraldarkdarkest);
   display: inline-flex;
@@ -23,7 +23,7 @@ html{
 }
 
 
-.managecompanyContent{
+.companyContent{
   width: 600px;
   padding-bottom: 5%;
   display: flex;
@@ -33,7 +33,7 @@ html{
 
 /* 네비바 */
 
-.managecompany .nav-bar-instance {
+.company .nav-bar-instance {
   background-color: var(--neutraldarkdarkest);
   position:sticky;
   top: 0;
@@ -41,13 +41,13 @@ html{
 }
 
 /* 네비 타이틀 글자 */
-.managecompany .nav-title-text {
+.company .nav-title-text {
   color: var(--neutrallightlightest);
 }
 
 
 
-.managecompany .managecompany-profile {
+.company .company-profile {
   align-items: center;
   display: flex;
   flex: 0 0 auto;
@@ -60,7 +60,7 @@ html{
 
 }
 
-.managecompany .profile-img {
+.company .profile-img {
   height: 100px;
   width: 100%;
   display: flex;
@@ -78,20 +78,20 @@ html{
 
 }
 
-.managecompany .avatar-8 {
+.company .avatar-8 {
   height: 80px;
   left: 0;
   top: 0;
   width: 80px;
 }
 
-.managecompany .heart-filled {
+.company .heart-filled {
   position: relative;
   left: -30px;
   top:30px;
 }
 
-.managecompany .name {
+.company .name {
   align-items: center;
   display: inline-flex;
   flex: 0 0 auto;
@@ -101,7 +101,7 @@ html{
   width:100%;
 }
 
-.managecompany .text-wrapper-2 {
+.company .text-wrapper-2 {
   color: var(--neutrallightlightest);
   font-family: var(--heading-h3-font-family);
   font-size: var(--heading-h3-font-size);
@@ -116,7 +116,7 @@ html{
   width: fit-content;
 }
 
-.managecompany .text-wrapper-3 {
+.company .text-wrapper-3 {
   color: var(--neutrallightdark);
   font-family: "Inter", Helvetica;
   font-size: 12px;
@@ -129,7 +129,7 @@ html{
   width: fit-content;
 }
 
-.managecompany .tab {
+.company .tab {
   display: flex;
   width: 100%;
   box-sizing: border-box;
@@ -144,43 +144,43 @@ html{
 }
 
 
-.managecompany .content-switcher-2 {
+.company .content-switcher-2 {
   background-color: unset;
   width: 70%;
   background-color: var(--neutraldarkdarkest);
 
 }
 
-.managecompany .design-component-instance-node-2 {
+.company .design-component-instance-node-2 {
   color: var(--neutrallightlightest);
 }
 
-.managecompany .content-switcher-3 {
+.company .content-switcher-3 {
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-color: var(--highlightlight);
   border-radius: unset;
   flex: 1;
   flex-grow: 1;
-  z-managecompany: 4;
+  z-company: 4;
 }
 
-.managecompany .content-switcher-4 {
+.company .content-switcher-4 {
   color: var(--neutrallightdark);
   margin-top: -0.7px;
 }
 
-.managecompany .content-switcher-5 {
+.company .content-switcher-5 {
   border-bottom-style: solid;
   border-bottom-width: 0.7px;
   border-color: var(--neutraldarkdark);
   border-radius: unset;
   flex: 1;
   flex-grow: 1;
-  z-managecompany: 2;
+  z-company: 2;
 }
 
-.managecompany .content-switcher-6 {
+.company .content-switcher-6 {
   background-color: unset;
   border-bottom-style: solid;
   border-bottom-width: 0.7px;
@@ -188,10 +188,10 @@ html{
   border-radius: unset;
   flex: 1;
   flex-grow: 1;
-  z-managecompany: 0;
+  z-company: 0;
 }
 
-.managecompany-section{
+.company-section{
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -200,7 +200,7 @@ html{
   gap: 30px;
 }
 
-.managecompany .managecompany-detailinfo {
+.company .company-detailinfo {
   align-items: center;
   display: flex;
   flex: 0 0 auto;
@@ -214,12 +214,12 @@ html{
   gap:10px
 }
 
-.managecompany .subtitile {
+.company .subtitile {
   flex: 0 0 auto;  
   width: 100%;
 }
 
-.managecompany .list-title-2 {
+.company .list-title-2 {
   color: var(--neutrallightlightest);
   flex: unset;
   font-size: var(--action-action-l-font-size);
@@ -227,7 +227,7 @@ html{
 }
 
 
-.managecompany-section .checkBox{
+.company-section .checkBox{
   color: var(--neutrallightlightest);
   font-family: var(--heading-h5-font-family);
   font-style: var(--heading-h5-font-style);
@@ -243,7 +243,7 @@ html{
 }
 
 
-.managecompany .news {
+.company .news {
   height: fit-content;
   margin-bottom: 50px;
   position: relative;
@@ -256,7 +256,7 @@ html{
   gap: 10px;
 }
 
-.managecompany .news-list-component {
+.company .news-list-component {
   align-items: center;
   display: inline-flex;
   flex-direction: column;
@@ -267,7 +267,7 @@ html{
   top: 53px;
 }
 
-.managecompany .news-bubble {
+.company .news-bubble {
   align-items: flex-start;
   background-color: var(--neutraldarkmedium);
   border-radius: 20px;
@@ -278,7 +278,7 @@ html{
   position: relative;
 }
 
-.managecompany .name-4 {
+.company .name-4 {
   align-self: stretch;
   color: var(--neutrallightdarkest);
   font-family: "Inter", Helvetica;
@@ -290,7 +290,7 @@ html{
   position: relative;
 }
 
-.managecompany .message-2 {
+.company .message-2 {
   color: var(--neutrallightlightest);
   font-family: "Inter", Helvetica;
   font-size: var(--body-body-XS-line-height);
@@ -302,11 +302,11 @@ html{
   width: fit-content;
 }
 
-.managecompany .text-wrapper-5 {
+.company .text-wrapper-5 {
   font-weight: 700;
 }
 
-.managecompany .text-wrapper-6 {
+.company .text-wrapper-6 {
   color: #ffffff;
   font-family: "Inter", Helvetica;
   font-size: 14px;
@@ -317,13 +317,13 @@ html{
 
 
 
-.managecompany .accordion-instance {
+.company .accordion-instance {
   left: 225px;
   position: absolute;
   top: 511px;
   width: 300px;
 }
 
-.managecompany .accordion-2 {
+.company .accordion-2 {
   background-color: transparent;
 }
