--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -6,7 +6,6 @@
   }
   
   .main .div-2 {
-    height: 1767px;
     position: relative;
     width: 600px;
     padding-bottom: 300px;
@@ -15,8 +14,7 @@
   .main .main-image {
     height: 180px !important;
     left: 0 !important;
-    position: absolute !important;
-    top: 0 !important;
+    position: relative;
     width: 600px !important;
     padding: 0;
   }
@@ -32,15 +30,15 @@
     display: flex;
     gap: 10px;
     justify-content: center;
-    position: absolute;
-    top: 200px;
+    position: relative;
     width: 600px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
   .main .home-copyright {
-    flex: 1 !important;
-    flex-grow: 1 !important;
-    width: unset !important;
+    width: unset;
+    text-align: center;
   }
   
   .main .design-component-instance-node {
@@ -73,8 +71,7 @@
     gap: 10px;
     height: 100px;
     justify-content: center;
-    position: absolute;
-    top: 265px;
+    position: relative;
     width: 600px;
   }
   
@@ -100,9 +97,10 @@
     gap: 10px;
     height: 50px;
     justify-content: center;
-    position: absolute;
-    top: 400px;
+    position: relative;
     width: 600px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
   .main .content-switcher-2 {
@@ -154,8 +152,7 @@
     gap: 10px;
     height: 50px;
     justify-content: center;
-    position: absolute;
-    top: 470px;
+    position: relative;
     width: 600px;
   }
   
@@ -174,8 +171,7 @@
     gap: 10px;
     height: 1301px;
     left: 0;
-    position: absolute;
-    top: 520px;
+    position: relative;
     width: 600px;
   }
   
@@ -210,7 +206,6 @@
     display: flex;
     flex: 0 0 auto;
     gap: 12px;
-    overflow-x: scroll;
     position: relative;
     width: 100%;
   }
@@ -242,7 +237,7 @@
   
   .main .image-instance {
     left: 0 !important;
-    position: absolute !important;
+    position: relative;
     top: 0 !important;
     padding: 0px;
   }
