fix: tab bar font h5

--- a/src/components/Tab/style.css
+++ b/src/components/Tab/style.css
@@ -10,7 +10,6 @@
 }
 
 .MainTab .tab-btn {
-    
     background-color: transparent;
     align-items: center;
     border-radius: 0px;
@@ -22,26 +21,26 @@
     flex: 1 1 !important;
     flex-grow: 1 !important;
     z-index: 2 !important;
-    font-family: var(--body-body-m-font-family);
-    font-size: var(--body-body-m-font-size);
-    font-style: var(--body-body-m-font-style);
-    font-weight: var(--body-body-m-font-weight);
-    letter-spacing: var(--body-body-m-letter-spacing);
-    line-height: var(--body-body-m-line-height);
+    font-family: var(--heading-h5-font-family);
+    font-size: var(--heading-h5-font-size);
+    font-style: var(--heading-h5-font-style);
+    font-weight: var(--heading-h5-font-weight);
+    letter-spacing: var(--heading-h5-letter-spacing);
+    line-height: var(--heading-h5-line-height);
     color: var(--neutrallightdark);
-    border-bottom: 2px solid var(--neutraldarkdark); /* 추가: 파랑색 탭 밑에 선 */
+    border-bottom: 2px solid var(--neutraldarkdark);
     cursor: pointer;
     
 }
 
 .MainTab .active {
     
-    font-family: var(--body-body-m-font-family);
-    font-size: var(--body-body-m-font-size);
-    font-style: var(--body-body-m-font-style);
-    font-weight: var(--body-body-m-font-weight);
-    letter-spacing: var(--body-body-m-letter-spacing);
-    line-height: var(--body-body-m-line-height);
+    font-family: var(--heading-h5-font-family);
+    font-size: var(--heading-h5-font-size);
+    font-style: var(--heading-h5-font-style);
+    font-weight: var(--heading-h5-font-weight);
+    letter-spacing: var(--heading-h5-letter-spacing);
+    line-height: var(--heading-h5-line-height);
     background-color: transparent;
     align-items: center;
     border-radius: 0px;
@@ -54,7 +53,7 @@
     flex-grow: 1 !important;
     z-index: 2 !important;
     color: var(--neutrallightlightest);
-    border-bottom: 2px solid var(--highlightlight); /* 추가: 클릭된 탭 밑에 빨간색 선 */
+    border-bottom: 2px solid var(--highlightlight);
     cursor: pointer;
     
 }
