--- a/src/components/NewsCard/style.css
+++ b/src/components/NewsCard/style.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    height: 81px;
+    height: fit-content;
     padding: 12px 16px;
     position: relative;
     width: 330px;
@@ -49,6 +49,7 @@
     margin-bottom: 10px;
     font-weight: 700;
     overflow-y:hidden;
+    word-break: keep-all;
   }
   
   .newsCardText {
@@ -56,4 +57,6 @@
     font-size: var(--body-body-XS-line-height);
     font-weight: 400;
     height: fit-content;
+    word-break: keep-all;
+
   }
