--- a/src/components/MessageList/style.css
+++ b/src/components/MessageList/style.css
@@ -8,15 +8,15 @@
   }
 
   
-  /*작성자가 고객일 경우*/
+   /* 작성자가 고객일 경우 */
 
-  /* .MessageList .messageBubble {
+  .MessageList .messageBubble-User {
     width: 100%;
     background-color: blue;
     display: flex; 
   }
   
-  .messageBubble .bubbleContent {
+  .messageBubble-User .bubbleContent-User {
     width: 200px;
     margin: 15px;
     align-items: flex-start;
@@ -28,12 +28,12 @@
     padding: 10px 15px;
     box-sizing: border-box;
     white-space: normal; 
-  } 
+  }  
   
   
   
     
-  .bubbleContent .userName {
+  .bubbleContent-User .userName-User {
     color: var(--neutraldarklight);
     font-family: var(--heading-h5-font-family);
     font-size: var(--heading-h5-font-size);
@@ -45,7 +45,7 @@
     position: relative;
   }
   
-  .bubbleContent .bubbleText {
+  .bubbleContent-User .bubbleText-User {
     color: var(--neutrallightlightest);
     font-family: var(--body-body-m-font-family);
     font-size: var(--body-body-m-font-size);
@@ -60,18 +60,17 @@
   
   
   
-  */
 
 
 /*작성자가 회사일 경우*/
 
-.MessageList .messageBubble {
+.MessageList .messageBubble-Corp {
     max-width: 100%;
     display: flex; 
     justify-content: flex-end;
   }
 
-.messageBubble .bubbleContent {
+.messageBubble-Corp .bubbleContent-Corp {
     width: 50%;
     margin: 15px;
     align-items: flex-end;
@@ -85,7 +84,7 @@
 
 
   
-  .bubbleContent .userName {
+  .bubbleContent-Corp .userName-Corp {
     color: var(--supportwarninglight);
     font-family: var(--body-body-l-font-family);
     font-size: var(--body-body-l-font-size);
@@ -99,7 +98,7 @@
   }
   
   
-  .bubbleContent .bubbleText {
+  .bubbleContent-Corp .bubbleText-Corp {
     color: var(--neutrallightlightest);
     font-family: var(--body-body-XS-font-family);
     font-size: var(--body-body-XS-font-size);
