--- a/src/components/MessageList/style.css
+++ b/src/components/MessageList/style.css
@@ -1,6 +1,6 @@
 .MessageList {
     width: 100%;
-    max-height: 400px;
+    height: 400px;
     border-radius: 10px;
     overflow-y: auto;
     box-sizing: border-box;
@@ -12,12 +12,12 @@
 
   .MessageList .messageBubble-User {
     width: 100%;
-    background-color: blue;
     display: flex; 
   }
   
   .messageBubble-User .bubbleContent-User {
     width: 200px;
+    height: fit-content;
     margin: 15px;
     align-items: flex-start;
     background-color: var(--neutraldarkmedium);
@@ -28,6 +28,7 @@
     padding: 10px 15px;
     box-sizing: border-box;
     white-space: normal; 
+    word-break: keep-all;
   }  
   
   
@@ -35,25 +36,32 @@
     
   .bubbleContent-User .userName-User {
     color: var(--neutraldarklight);
-    font-family: var(--heading-h5-font-family);
-    font-size: var(--heading-h5-font-size);
-    font-style: var(--heading-h5-font-style);
-    font-weight: var(--heading-h5-font-weight);
-    letter-spacing: var(--heading-h5-letter-spacing);
-    line-height: var(--heading-h5-line-height);
-    margin-top: -1px;
+    font-family: var(--body-body-l-font-family);
+    font-size: var(--body-body-l-font-size);
+    font-style: var(--body-body-l-font-style);
+    font-weight: var(--body-body-l-font-weight);
+    letter-spacing: var(--body-body-l-letter-spacing);
+    line-height: var(--body-body-l-line-height);
+    margin-bottom: 10px;
     position: relative;
+    text-align: left;
+    word-break: keep-all;
+
   }
   
   .bubbleContent-User .bubbleText-User {
     color: var(--neutrallightlightest);
-    font-family: var(--body-body-m-font-family);
-    font-size: var(--body-body-m-font-size);
-    font-style: var(--body-body-m-font-style);
-    font-weight: var(--body-body-m-font-weight);
-    letter-spacing: var(--body-body-m-letter-spacing);
-    line-height: var(--body-body-m-line-height);
+    font-family: var(--body-body-XS-font-family);
+    font-size: var(--body-body-XS-font-size);
+    font-style: var(--body-body-XS-font-style);
+    font-weight: var(--body-body-XS-font-weight);
+    letter-spacing: var(--body-body-XS-letter-spacing);
+    line-height: var(--body-body-XS-line-height);
+
     position: relative;
+    word-break: keep-all;
+    white-space: normal; 
+
   }
   
   
@@ -68,6 +76,8 @@
     max-width: 100%;
     display: flex; 
     justify-content: flex-end;
+    word-break: keep-all;
+
   }
 
 .messageBubble-Corp .bubbleContent-Corp {
@@ -80,6 +90,8 @@
     padding: 10px 15px;
     box-sizing: border-box;
     white-space: normal; 
+    word-break: keep-all;
+
   }
 
 
@@ -95,6 +107,8 @@
     margin-bottom: 10px;
     position: relative;
     text-align: right;
+    word-break: keep-all;
+
   }
   
   
@@ -108,6 +122,8 @@
     line-height: var(--body-body-XS-line-height);
     position: relative;
     text-align: right;
+    word-break: keep-all;
+
 
   }
   
