--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: var(--neutraldarkdark);
+  opacity: 0.5;
   text-align: center;
   align-items: center;
   justify-content: center;
