--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -8,4 +8,11 @@
   text-align: center;
   align-items: center;
   justify-content: center;
+  background-color: var(--neutraldarklightest);
+  font-family: var(--action-action-s-font-family);
+  font-size: var(--action-action-s-font-size);
+  font-style: var(--action-action-s-font-style);
+  font-weight: var(--action-action-s-font-weight);
+  letter-spacing: var(--action-action-s-letter-spacing);
+  line-height: var(--action-action-s-line-height);
 }
