--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -66,6 +66,8 @@ html{
   display: flex;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(#fff,#fff,#fff,#fff, rgba(27, 21, 70, 1) );
+  border-radius: 10px;
 }
 
 .profile-img .overlap-group {
