--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,12 +1,15 @@
 .navbar {
     width: 600px;
     height: 80px;
-    background-color: #f2f2f2;
+    background-color: rgba(27, 21, 70, 1);
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    background-color: transparent;
+    /* background-color: transparent; */
+    z-index: 1;
+    position: sticky;
+    top: 0;
 }
 
 .icon {
