--- a/src/pages/Company/style.css
+++ b/src/pages/Company/style.css
@@ -4,6 +4,12 @@
   border: 1px solid aqua;
 } */
 
+.main {
+  background-color: #11052e;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 
 html{
