--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -76,6 +76,7 @@ html{
   justify-content: center;
   background: linear-gradient(#fff,#fff,#fff,#fff,#fff, rgba(27, 21, 70, 1) );
   border-radius: 10px;
+  padding-bottom: 40px;
 }
 
 .profile-img .overlap-group {
