--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -20,6 +20,7 @@ html{
 
 /* 전체화면 */
 .company {
+  width: 600px;
   align-items: center;
   background-color: var(--neutraldarkdarkest);
   display: inline-flex;
