--- a/src/pages/Company/style.css
+++ b/src/pages/Company/style.css
@@ -7,8 +7,9 @@
 .company {
   background-color: #11052e;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;  
   justify-content: center;
+  align-items: center;
 }
 
 
