--- a/src/pages/PostCompany/styles.css
+++ b/src/pages/PostCompany/styles.css
@@ -3,8 +3,9 @@
 .main {
   background-color: #11052e;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 
