--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -88,17 +88,19 @@
 
 .company .profile-img {
   height: 100px;
-  width: 100%;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#fff,#fff,#fff,#fff,#fff, rgba(27, 21, 70, 1) );
+  background: #fff;
   border-radius: 10px;
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .profile-img .logo-img {
-  width: 90%;
+  width: 80%;
 }
 
 .profile-img .overlap-group {
@@ -118,10 +120,12 @@
   width: 80px;
 }
 
+
+
 .company .heart-filled {
   position: relative;
-  left: -30px;
-  top:30px;
+  left: -15px;
+  top: 30px;
 }
 
 .company .name {
